--- a/css/global.css
+++ b/css/global.css
@@ -2,6 +2,7 @@ body{
     background: #D9D9D9;
     margin: 0px;
     box-sizing: border-box;
+    max-height: 100vh;
 }
 
 
@@ -10,7 +11,7 @@ body{
     padding-left: 20px;
     padding-right: 20px;
     margin: 0 auto;
-    max-width: 500px;
+    max-width: 1000px;
     box-sizing: border-box;
 }
 
@@ -38,4 +39,15 @@ ul {
 a {
     text-decoration: none;
     color: inherit;
+}
+
+
+.btn{
+    position: relative;
+    background-color: #3A3C48;
+    color: var(--cor-0);
+    padding: 15px 60px;
+    z-index: 1;
+    font: 400 1.5rem/1.25 "Roboto", sans-serif;
+    border: none;
 }
