--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,10 @@ color: #65687C;
 text-align: center;
 }
 
+.apresente_cartao.off{
+    display: none;
+}
+
 .apresente_cartao span{
     display: block;
 }
@@ -44,21 +48,42 @@ text-align: center;
     }
 
 .decoracoes{
-
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.decoracoes img{
-  
+.passos{
+    opacity: 0;
 }
 
-.teste{
-    background-color: red;
+.passos.ativo{
+    opacity: 1;
+    transition: transform 0.8s, opacity 2s;
+    display: block;
+    color: var(--cor-0);
+    text-align: start;
+    background-color: #1f1f1fd5;
+    margin-bottom: 10px;
+}
+
+.passos p {
     
-    width: 100px;
-    height: 100px;
-    margin-bottom: 20px;
+    padding: 25px;
+    
+}
+
+.btn-container{
+    opacity: 0;
+}
+
+.btn-container.ativo {
+    opacity: 1;
+    transition: transform 0.8s, opacity 2s;
+   display: flex;
+   justify-content: center;
+   position: relative;
+   z-index: 1;
+
 }
 
